fixed-checkbox-alignment: Checkbox alignement issue.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -121,6 +121,9 @@
 
         > .admin__field-control {
             #mix-grid .column(@field-control-grid__column, @field-grid__columns);
+            input[type="checkbox"] {
+                margin-top: 11px;
+            }
         }
 
         > .admin__field-label {
